--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -23,7 +23,7 @@ padding: 1% 1% 1% 1% ;
 }
 
 
-  
+
 .form-control{
 	box-shadow: none;
 }
@@ -87,4 +87,11 @@ margin: 0px  !important;
 
 .table-img{
 	height: 50px;
-}  
+}
+.imagePreview{
+    border: none;
+    width: 100%;
+    height: 320px;
+    object-fit: cover;
+
+}
