--- a/admin/public/css/style.css
+++ b/admin/public/css/style.css
@@ -95,3 +95,11 @@ margin: 0px  !important;
     object-fit: cover;
 
 }
+
+.imageOnRow{
+    border: none !important;
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+
+}
